desactivate xml validation (dependency is a pain in the *ss) and some small fixe